@@ -494,6 +494,7 @@
     put-bytevector
     put-char
     write-char
+    newline
     transcoder-codec
     transcoder-eol-style
     transcoder-error-handling-mode
